--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
+    "exports-loader": "^0.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^7.0.0",
@@ -38,12 +40,14 @@
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^4.0.0",
     "gulp.spritesmith": "^6.2.1",
+    "imports-loader": "^0.8.0",
     "require-yaml": "^0.0.1",
     "run-sequence": "^2.2.0",
     "webpack": "^3.8.1",
     "webpack-stream": "^4.0.0"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "magnific-popup": "^1.1.0"
   }
 }
