--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
+    "eslint": "^4.18.2",
+    "eslint-formatter-pretty": "^1.3.0",
+    "eslint-loader": "^2.0.0",
     "exports-loader": "^0.7.0",
+    "expose-loader": "^0.7.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^7.0.0",
     "gulp-cache": "^1.0.1",
+    "gulp-cached": "^1.1.1",
     "gulp-cheerio": "^0.6.2",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.7.0",
@@ -32,6 +37,7 @@
     "gulp-pug": "^3.3.0",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.3",
     "gulp-uglify": "^2.0.0",
@@ -43,11 +49,26 @@
     "imports-loader": "^0.8.0",
     "require-yaml": "^0.0.1",
     "run-sequence": "^2.2.0",
+    "script": "^0.1.4",
+    "script-loader": "^0.7.2",
     "webpack": "^3.8.1",
     "webpack-stream": "^4.0.0"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.2.5",
+    "gsap": "^1.20.4",
+    "inputmask": "^3.3.11",
+    "ion-rangeslider": "^2.2.0",
     "jquery": "^3.2.1",
-    "magnific-popup": "^1.1.0"
+    "jquery-form-styler": "^2.0.2",
+    "jquery-lazy": "^1.7.7",
+    "jquery-validation": "^1.17.0",
+    "jquery.animate-number": "^0.0.14",
+    "magnific-popup": "^1.1.0",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "readmore-js": "^2.1.0",
+    "scrollmagic": "^2.0.5",
+    "slick-carousel": "^1.8.1",
+    "svg4everybody": "^2.1.9"
   }
 }
