--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.2.5",
+    "air-datepicker": "^2.2.3",
     "gsap": "^1.20.4",
     "inputmask": "^3.3.11",
     "ion-rangeslider": "^2.2.0",
