--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jquery": "^3.2.1",
     "jquery-form-styler": "^2.0.2",
     "jquery-lazy": "^1.7.7",
+    "jquery-mousewheel": "^3.1.13",
     "jquery-validation": "^1.17.0",
     "jquery.animate-number": "^0.0.14",
     "magnific-popup": "^1.1.0",
